made changes for report